# Coppo

./: Cargo.toml  LICENSE  Makefile.toml  README.md  build.rs
lib/coppo-addons/: Cargo.toml
lib/coppo-addons/src/: lib.rs
lib/coppo-build/: Cargo.toml
lib/coppo-build/src/: lib.rs
lib/coppo-cli/: Cargo.toml
lib/coppo-cli/src/: lib.rs
lib/coppo-config/: Cargo.toml
lib/coppo-config/src/: lib.rs
lib/coppo-logger/: Cargo.toml
lib/coppo-logger/src/: lib.rs
lib/coppo-new/: Cargo.toml
lib/coppo-new/src/: lib.rs
src/: main.rs
