[package]
name = "coppo"
version = "0.0.1-alpha"
edition = "2021"
authors = ["hacbit <hacbit@foxmail.com>"]
license = "MIT"

[workspace]
members = [
    "lib/coppo-addons",
    "lib/coppo-build",
    "lib/coppo-cli",
    "lib/coppo-config",
    "lib/coppo-logger",
    "lib/coppo-new",
]

[dependencies]
coppo-cli = { path = "lib/coppo-cli" }
coppo-new = { path = "lib/coppo-new" }
coppo-build = { path = "lib/coppo-build" }

[build-dependencies]
dirs = "5.0.1"
